--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-bootstrap": "^0.32.26",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "5.0.2",
     "chance": "^1.1.7",
     "framer-motion": "^4.1.17",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-spring": "^9.0.0-rc.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
