--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "5.0.2",
     "chance": "^1.1.7",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "framer-motion": "^4.1.17",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
