--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
+    "amazon-cognito-identity-js": "^5.1.0",
     "body-parser": "^1.19.0",
     "bootstrap": "5.0.2",
     "chance": "^1.1.7",
