updating sign in page

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "4.24",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -21,6 +26,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "framer-motion": "^4.1.17",
+    "less": "^4.1.1",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
