--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "4.24",
+    "@aws-amplify/ui-react": "^1.2.11",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -20,6 +21,8 @@
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
     "amazon-cognito-identity-js": "^5.1.0",
+    "aws-amplify": "^4.2.5",
+    "aws-lambda": "^1.0.6",
     "body-parser": "^1.19.0",
     "bootstrap": "5.0.2",
     "chance": "^1.1.7",
@@ -67,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.83",
     "@types/react-router-dom": "^5.1.8"
   }
 }
