--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
@@ -71,6 +72,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.83",
+    "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.8"
   }
 }
