--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -39,5 +39,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "modulePhotosStorage": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
