--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "typescript": "^4.1.2",
+    "use-deep-compare-effect": "^1.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -71,6 +72,7 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/typescript-operations": "^2.1.4",
     "@types/aws-lambda": "^8.10.83",
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.8"
