--- a/amplify/backend/auth/accamplifyb7e549fe/accamplifyb7e549fe-cloudformation-template.yml
+++ b/amplify/backend/auth/accamplifyb7e549fe/accamplifyb7e549fe-cloudformation-template.yml
@@ -134,6 +134,59 @@ Parameters:
   dependsOn:
     Type: CommaDelimitedList
       
+  
+  thirdPartyAuth:
+    Type: String
+            
+        
+  authProviders:
+    Type: CommaDelimitedList
+      
+  facebookAppId:
+    Type: String
+  
+            
+  googleClientId:
+    Type: String
+  
+            
+  amazonAppId:
+    Type: String
+  
+            
+  appleAppId:
+    Type: String
+  
+            
+  
+  userPoolGroups:
+    Type: String
+            
+  
+  adminQueries:
+    Type: String
+            
+  triggers:
+    Type: String
+  
+            
+  
+  hostedUI:
+    Type: String
+            
+            
+      
+  parentStack:
+    Type: String
+        
+  
+  breakCircularDependency:
+    Type: String
+            
+        
+  permissions:
+    Type: CommaDelimitedList
+      
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
   
@@ -372,6 +425,20 @@ Resources:
             - cognito-idp.${region}.amazonaws.com/${client}
             - { region: !Ref "AWS::Region",  client: !Ref UserPool}
             
+      SupportedLoginProviders:
+        
+        graph.facebook.com: !Ref facebookAppId
+        
+        
+        accounts.google.com: !Ref googleClientId
+        
+        
+        www.amazon.com: !Ref amazonAppId
+        
+        
+        appleid.apple.com: !Ref appleAppId
+        
+      
       AllowUnauthenticatedIdentities: !Ref allowUnauthenticatedIdentities
       
     
@@ -420,9 +487,21 @@ Outputs :
     Condition: ShouldOutputAppClientSecrets
   
   
+  GoogleWebClient:
+    Value: !Ref googleClientId
   
   
   
   
+  FacebookWebClient:
+    Value: !Ref facebookAppId
+  
+  
+  AmazonWebClient:
+    Value: !Ref amazonAppId
+  
+  
+  AppleWebClient:
+    Value: !Ref appleAppId
   
   
