--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -38,6 +38,231 @@
           "additionalAuthenticationProviders": []
         }
       }
+    },
+    "container1815875a": {
+      "resourceName": "container1815875a",
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "accamplifyb7e549fe",
+          "attributes": [
+            "UserPoolId"
+          ]
+        },
+        {
+          "category": "api",
+          "resourceName": "AppliedCodingConceptsAPI",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ]
+        },
+        {
+          "category": "storage",
+          "resourceName": "modulePhotosStorage",
+          "attributes": [
+            "BucketName"
+          ]
+        },
+        {
+          "category": "",
+          "resourceName": "NetworkStack",
+          "attributes": [
+            "ClusterName",
+            "VpcId",
+            "VpcCidrBlock",
+            "SubnetIds",
+            "VpcLinkId",
+            "CloudMapNamespaceId"
+          ]
+        }
+      ],
+      "deploymentMechanism": "FULLY_MANAGED",
+      "imageSource": {
+        "type": "TEMPLATE",
+        "template": "graphql-express"
+      },
+      "restrictAccess": false,
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "ElasticContainer",
+      "environmentMap": {
+        "AUTH_ACCAMPLIFYB7E549FE_USERPOOLID": {
+          "Ref": "authaccamplifyb7e549feUserPoolId"
+        },
+        "API_APPLIEDCODINGCONCEPTSAPI_GRAPHQLAPIIDOUTPUT": {
+          "Ref": "apiAppliedCodingConceptsAPIGraphQLAPIIdOutput"
+        },
+        "API_APPLIEDCODINGCONCEPTSAPI_GRAPHQLAPIENDPOINTOUTPUT": {
+          "Ref": "apiAppliedCodingConceptsAPIGraphQLAPIEndpointOutput"
+        },
+        "STORAGE_MODULEPHOTOSSTORAGE_BUCKETNAME": {
+          "Ref": "storagemodulePhotosStorageBucketName"
+        }
+      },
+      "categoryPolicies": [
+        {
+          "Effect": "Allow",
+          "Action": [
+            "cognito-identity:Describe*",
+            "cognito-identity:Get*",
+            "cognito-identity:List*",
+            "cognito-idp:Describe*",
+            "cognito-idp:AdminGetDevice",
+            "cognito-idp:AdminGetUser",
+            "cognito-idp:AdminList*",
+            "cognito-idp:List*",
+            "cognito-sync:Describe*",
+            "cognito-sync:Get*",
+            "cognito-sync:List*",
+            "iam:ListOpenIdConnectProviders",
+            "iam:ListRoles",
+            "sns:ListPlatformApplications",
+            "cognito-idp:ForgotPassword",
+            "cognito-idp:UpdateAuthEventFeedback",
+            "cognito-idp:UpdateResourceServer",
+            "cognito-idp:UpdateUserPoolClient",
+            "cognito-idp:AdminUpdateUserAttributes",
+            "cognito-idp:UpdateUserAttributes",
+            "cognito-idp:UpdateUserPoolDomain",
+            "cognito-idp:UpdateIdentityProvider",
+            "cognito-idp:UpdateGroup",
+            "cognito-idp:AdminUpdateAuthEventFeedback",
+            "cognito-idp:UpdateDeviceStatus",
+            "cognito-idp:UpdateUserPool"
+          ],
+          "Resource": [
+            {
+              "Fn::Join": [
+                "",
+                [
+                  "arn:aws:cognito-idp:",
+                  {
+                    "Ref": "AWS::Region"
+                  },
+                  ":",
+                  {
+                    "Ref": "AWS::AccountId"
+                  },
+                  ":userpool/",
+                  {
+                    "Ref": "authaccamplifyb7e549feUserPoolId"
+                  }
+                ]
+              ]
+            }
+          ]
+        },
+        {
+          "Effect": "Allow",
+          "Action": [
+            "appsync:GraphQL"
+          ],
+          "Resource": [
+            {
+              "Fn::Join": [
+                "",
+                [
+                  "arn:aws:appsync:",
+                  {
+                    "Ref": "AWS::Region"
+                  },
+                  ":",
+                  {
+                    "Ref": "AWS::AccountId"
+                  },
+                  ":apis/",
+                  {
+                    "Ref": "apiAppliedCodingConceptsAPIGraphQLAPIIdOutput"
+                  },
+                  "/types/Query/*"
+                ]
+              ]
+            },
+            {
+              "Fn::Join": [
+                "",
+                [
+                  "arn:aws:appsync:",
+                  {
+                    "Ref": "AWS::Region"
+                  },
+                  ":",
+                  {
+                    "Ref": "AWS::AccountId"
+                  },
+                  ":apis/",
+                  {
+                    "Ref": "apiAppliedCodingConceptsAPIGraphQLAPIIdOutput"
+                  },
+                  "/types/Mutation/*"
+                ]
+              ]
+            }
+          ]
+        },
+        {
+          "Effect": "Allow",
+          "Action": "s3:ListBucket",
+          "Resource": [
+            {
+              "Fn::Join": [
+                "",
+                [
+                  "arn:aws:s3:::",
+                  {
+                    "Ref": "storagemodulePhotosStorageBucketName"
+                  }
+                ]
+              ]
+            }
+          ]
+        },
+        {
+          "Effect": "Allow",
+          "Action": [
+            "s3:GetObject"
+          ],
+          "Resource": [
+            {
+              "Fn::Join": [
+                "",
+                [
+                  "arn:aws:s3:::",
+                  {
+                    "Ref": "storagemodulePhotosStorageBucketName"
+                  },
+                  "/*"
+                ]
+              ]
+            }
+          ]
+        }
+      ],
+      "mutableParametersState": {
+        "permissions": {
+          "auth": {
+            "accamplifyb7e549fe": [
+              "read",
+              "update"
+            ]
+          },
+          "api": {
+            "AppliedCodingConceptsAPI": [
+              "Query",
+              "Mutation"
+            ]
+          },
+          "storage": {
+            "modulePhotosStorage": [
+              "read"
+            ]
+          }
+        }
+      },
+      "skipHashing": false,
+      "apiType": "GRAPHQL",
+      "iamAccessUnavailable": true
     }
   },
   "storage": {
